schema/testdata/validation_name_clashes_model/schema.keel
message Foo {
}

model ModelWithActions {
    fields {
        foo Text
    }

    actions {
        create createModel() with (foo)
        list listModel()
        update updateModel(id) with (foo)
    }

    actions {
        read readModel(Foo) returns (Foo)
    }
}

// Begin invalid names - model
model CreateModelInput {
}

model ListModelInput {
}

model ListModelConnection {
}

model ListModelEdge {
}

model UpdateModelInput {
}

model AuthenticateInput {
}

model AuthenticateResponse {
}

model RequestPasswordInput {
}

model RequestPasswordResponse {
}

model RequestPasswordResetInput {
}

model RequestPasswordResetResponse {
}

model PageInfo {
}

model String {
}

model Number {
}

model Boolean {
}

model Request {
}

model Response {
}

model Array {
}

model Object {
}

model Error {
}

model Mutation {
}

model Query {
}

model Subscription {
}
