schema/testdata/errors/name_clashes_model.keel
message Foo {
}

model ModelWithActions {
    fields {
        foo Text
    }

    actions {
        create createModel() with (foo)
        list listModel()
        update updateModel(id) with (foo)
    }

    actions {
        read readModel(Foo) returns (Foo)
    }
}

// Begin invalid names - model
//expect-error:7:23:NamingError:Names cannot end with 'Input'
model CreateModelInput {
}

//expect-error:7:21:NamingError:Names cannot end with 'Input'
model ListModelInput {
}

//expect-error:7:26:NamingError:Names cannot end with 'Connection'
model ListModelConnection {
}

//expect-error:7:20:NamingError:Names cannot end with 'Edge'
model ListModelEdge {
}

//expect-error:7:23:NamingError:Names cannot end with 'Input'
model UpdateModelInput {
}

//expect-error:7:24:NamingError:Names cannot end with 'Input'
model AuthenticateInput {
}

//expect-error:7:27:NamingError:Names cannot end with 'Response'
model AuthenticateResponse {
}

//expect-error:7:27:NamingError:Names cannot end with 'Input'
model RequestPasswordInput {
}

//expect-error:7:30:NamingError:Names cannot end with 'Response'
model RequestPasswordResponse {
}

//expect-error:7:32:NamingError:Names cannot end with 'Input'
model RequestPasswordResetInput {
}

//expect-error:7:35:NamingError:Names cannot end with 'Response'
model RequestPasswordResetResponse {
}

//expect-error:7:15:NamingError:Reserved name 'PageInfo'
model PageInfo {
}

//expect-error:7:13:NamingError:Reserved name 'String'
model String {
}

//expect-error:7:13:NamingError:Reserved name 'Number'
model Number {
}

//expect-error:7:14:NamingError:Reserved name 'Boolean'
model Boolean {
}

model Request {
}

model Response {
}

//expect-error:7:12:NamingError:Reserved name 'Array'
model Array {
}

//expect-error:7:13:NamingError:Reserved name 'Object'
model Object {
}

//expect-error:7:12:NamingError:Reserved name 'Error'
model Error {
}

//expect-error:7:15:NamingError:Reserved name 'Mutation'
model Mutation {
}

//expect-error:7:12:NamingError:Reserved name 'Query'
model Query {
}

//expect-error:7:19:NamingError:Reserved name 'Subscription'
model Subscription {
}
